# likelion13th-django

./: .gitignore  README.md  pyproject.toml
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
posts/: models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py
