[tool.poetry]
name = "django-test"
version = "0.1.0"
description = ""
authors = ["eunsu02 <regulus_leo08@naver.com>"]
readme = "README.md"
packages = [{include = "django_test", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
